Optimize lastVisitedMaps manipulation by replacing remove(0) with removeFirst() for improved performance